src/sass/components/_project-explorer.scss
.project-title {
    display:flex;
    align-items: center;
    min-height: 30px;
    padding-left: 20px;

    background-color: $explorer-color;

    color: whitesmoke;

    i {
        margin-right: 10px;
    }

    .fa-plus {
        font-size: 10px;
        transform-origin: center center;
        &:hover {
            transform: scale(1.3);
            color: white;
        }
    }

    @extend %selection;
    @extend %noselect;
}

.list-container {
    width: 100%;

    transition: all 0.5s ease;

    background-color: $primary-highlight;

    &:last-child {
        border-bottom: 1px solid #444;
    }

    overflow: hidden;

    &.opened {
        height: 200px;
    }

    &.closed {
        visibility: hidden;
        height: 0px;
    }
}

.todo-doc {
    display: flex;
    align-items: center;
    height: 25px;
    padding-left: 40px;
    padding-right: 10px;
    gap: 10px;

    color: #aaa;

    @extend %noselect;

    &:hover {
        cursor: pointer;
        color: #ddd;
    }

    i {
        font-size: 12px;
    }

    .fa-times {
        color: #aaa;
        &:hover {
            transform: scale(1.1);
            color: white;
        }
    }
    
}

